God, Dom manipulation is sth

--- a/index.html
+++ b/index.html
@@ -4,63 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>QuizMe</title>
     <link rel="stylesheet" href="style.css">
+    <script src="index.js"></script>
 </head>
 <body>
-<div class="wrapper">
-    <div class="center-box">
-        <h1>Ruby Quiz</h1>
-        <div class="quiz">
-            <br>
-            <h2 id="question">Question Here</h2>
-            <div class="answer-buttons">
-                <div class="butt1">
-                    <button id="butt">Answer 1</button>
-                </div>
-                <div class="butt2">
-                    <button id="butt">Answer 2</button>
-                </div>
-                <div class="butt3">
-                    <button id="butt">Answer 3</button>
-                </div>
-                <div class="butt4">
-                    <button id="butt">Answer 4</button>
-                </div>
-                <div class="button">
-                    <button id="next">Forward</button>
-                </div>
+    <div class="front-page">
+        <div class="custom-box">
+            <h3>Instruction:</h3>
+            <div class="info">
+                <p>Total number of questions:<span>20</span></p>
+            </div>
+            <div class="butt">
+                <button onclick="window.location.href = 'phase2.html'">Let's Quiz!!</button>
             </div>
         </div>
     </div>
-</div>
-    <!-- <div class="wrapper">
-        <div class="intro">
-            <div logo>
-                <img src="./images.jpeg" alt="">
-            </div>
-            <div>
-                <h1>Quizzles</h1>
-            </div>
-        </div>
-        <br>
-
-        <div class="play">
-            <h2>Let's Quiz!</h2>
-            <h3>Quiz for a higher IQ</h3>
-        </div>
-        <br>
-
-        <div class="buttons">
-            <div>
-                <button id="butt1">Quiz Now</button>
-            </div>
-            <div>
-                <button id="butt2">About</button>
-            </div>
-        </div>
-    </div> -->
-
-<script src="script.js"></script>
 </body>
 </html>
