--- a/phase2.html
+++ b/phase2.html
@@ -15,17 +15,17 @@
             <br>
             <h2 id="question">Question Here</h2>
             <div class="answer-buttons">
-                <div class="butt1">
-                    <button id="butt">Answer 1</button>
+                <div class="butt">
+                    <button id="butta">Answer 1</button>
                 </div>
-                <div class="butt2">
-                    <button id="butt">Answer 2</button>
+                <div class="butt">
+                    <button id="buttb">Answer 2</button>
                 </div>
-                <div class="butt3">
-                    <button id="butt">Answer 3</button>
+                <div class="butt">
+                    <button id="buttc">Answer 3</button>
                 </div>
-                <div class="butt4">
-                    <button id="butt">Answer 4</button>
+                <div class="butt">
+                    <button id="buttd">Answer 4</button>
                 </div>
                 <div class="button">
                     <button id="next" onclick="revealNextQuestion()">Forward</button>
