--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 <body>
     <div class="front-page">
         <div class="custom-box">
-            <h3>Instruction:</h3>
+            <h3>Instructions:</h3>
             <div class="info">
-                <p>Total number of questions:<span>20</span></p>
-            </div>
+                <p>Total number of questions: <span>30</span></p>
+                <br>
+                <p>Beware:<span> You cannot go back to previous question and you only select an option once, choose wisely...</span></p>
+                </div>
             <div class="butt">
                 <button onclick="window.location.href = 'phase2.html'">Let's Quiz!!</button>
             </div>
