--- a/index.html
+++ b/index.html
@@ -2,25 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QuizMe</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="index.js"></script>
+    <title>QuizMe!</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="front-page">
-        <div class="custom-box">
-            <h3>Instructions:</h3>
-            <div class="info">
-                <p>Total number of questions: <span>30</span></p>
-                <br>
-                <p>Beware:<span> You cannot go back to previous question and you only select an option once, choose wisely...</span></p>
-                </div>
-            <div class="butt">
-                <button onclick="window.location.href = 'phase2.html'">Let's Quiz!!</button>
+    <div class="container">
+        <h1>WELCOME! to my Quiz App</h1>
+        <b>Pick a Topic:</b>
+        <br>
+        <br>
+        <div class="wrapper">
+            <div id="faang">
+                <a href="phase.html"><img src="fangF.jpeg" alt="img"></a>
+            </div>
+        
+            <div id="ruby">
+                <a href="ruby.html"><img src="ruby.jpeg" alt="img"></a>
+            </div>
+
+            <div id="emerald">
+                <a href="emerald.html"><img src="emerald.png" alt="img"></a>
+            </div>
+        
+            <div id="python">
+                <a href="python.html"><img src="images.jpeg" alt="img"></a>
             </div>
         </div>
     </div>
+    <!-- <script src="dataBase.js"></script>
+    <script src="script.js"></script> -->
 </body>
 </html>
