--- a/rubyData.html
+++ b/rubyData.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAANGmE</title>
-    <link rel="stylesheet" href="phase2.css">
+    <link rel="stylesheet" href="rubyData.css">
 </head>
 <body>
 <div class="wrapper">
     <div class="center-box">
-        <h1><em>FAANG</em>ers Only</h1> 
+        <h1>Language: <em>Ruby</em></h1> 
         <div id="position">1/20</div>
         <div id="timer">
             <img src="icon.png" alt="img" width="60px">
@@ -37,7 +37,7 @@
         </div>
     </div>
 </div>
-<!-- <script src="dataBase.js" type="module"></script> -->
-<script src="faangData.js"></script>
+ <!-- <script src="dataBase.js" type="module"></script> --> 
+<script src="rubyData.js"></script>
 </body>
 </html>
