made some changes

--- a/emeraldData.html
+++ b/emeraldData.html
@@ -28,16 +28,13 @@
             <div class="button">
                 <a href="index.html"><button id="back">Quit</button></a>
                 <button id="next" onclick="revealNextQuestion()">Forward</button>
-                <button id="restart">Restart</button>
-                <div id="result">
-
-                </div>
+                <button id="restart" onclick="window.location.href = 'emerald.html'">Restart</button>
+                <div id="result"></div>
             </div>
 
         </div>
     </div>
-</div>
- <!-- <script src="dataBase.js" type="module"></script> --> 
+</div> 
 <script src="emeraldData.js"></script>
 </body>
 </html>
