--- a/pythonData.html
+++ b/pythonData.html
@@ -10,7 +10,7 @@
 <body>
 <div class="wrapper">
     <div class="center-box">
-        <h1>Language: <em>Python</em></h1> 
+        <h1>Topic: <em>Python</em></h1> 
         <div id="position">1/20</div>
         <div id="timer">
             <img src="icon.png" alt="img" width="60px">
