--- a/phase2.html
+++ b/phase2.html
@@ -28,10 +28,8 @@
             <div class="button">
                 <a href="index.html"><button id="back">Quit</button></a>
                 <button id="next" onclick="revealNextQuestion()">Forward</button>
+                <div id="result"></div>
                 <button id="restart" onclick="window.location.href = 'phase.html'">Restart</button>
-                <div id="result">
-
-                </div>
             </div>
 
         </div>
